[package]
name = "memoization"
version = "0.1.0"
authors = ["William Laeder <codylaeder@gmail.com>"]
repository = "https://github.com/killercup/hsl-rs.git"
homepage = "https://github.com/killercup/hsl-rs.git"
license = "Apache 2.0"
readme = "README.md"
documentation = "http://killercup.github.io/hsl-rs/"
description = "Allows for structure fields to be memoized"

[dependencies]
